background fix, dark mode default
The background now doesn't move with the container above it, and default has been set to dark mode.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,7 +123,7 @@
 
   html {
 
-    overflow-y: scroll;
+    overflow-y: auto;
 
   }
 
